--- a/upstream/NEWS
+++ b/upstream/NEWS
@@ -1,8 +1,24 @@
--- $Id: NEWS,v 1.49 2021/05/10 21:36:51 tom Exp $
+-- $Id: NEWS,v 1.58 2021/08/08 22:44:04 tom Exp $
 -------------------------------------------------------------------------------
 -- Changes by Thomas E. Dickey
 -- vile:txtmode
 -------------------------------------------------------------------------------
+
+2021/08/08
+	+ add symbolic link for flex++ manpage in makefile "install" rule.
+	> Boris Kolpackov:
+	+ add/use yylex_destroy() function like "new" flex which can be used to
+	  reset the lexer in order to re-execute it on different input.
+	+ fix a memory leak in gentab()
+
+2021/08/06
+	+ compiler-warning fixes
+
+2021/08/04
+	+ rewrote command-line options parsing, adding a table to map long
+	  options into the normal single-letter options.
+
+	+ updated config.guess, config.sub
 
 2021/05/10
 	+ modify skeleton to allow override of YY_BUF_SIZE
