--- a/upstream/package/debian/changelog
+++ b/upstream/package/debian/changelog
@@ -1,3 +1,21 @@
+reflex (20210808) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Fri, 06 Aug 2021 19:24:04 -0400
+
+reflex (20210806) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 05 Aug 2021 15:14:32 -0400
+
+reflex (20210804) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 03 Aug 2021 04:11:56 -0400
+
 reflex (20210510) unstable; urgency=low
 
   * maintenance updates
